--- a/ForAutomation/package.json
+++ b/ForAutomation/package.json
@@ -7,14 +7,15 @@
     "install": "node ./node_modules/protractor/bin/webdriver-manager update",
     "e2e": "gulp e2e"
   },
+
   "author": "",
+
   "license": "ISC",
+  
   "dependencies": {
     "browserstack-local": "1.3.1",
     "gulp": "3.9.1",
-    "jasmine-data-provider": "2.2.0"
-  },
-  "devDependencies": {
+    "jasmine-data-provider": "2.2.0",
     "babel-core": "6.26.3",
     "babel-loader": "7.1.4",
     "babel-polyfill": "6.26.0",
